--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
   <body>
     <section class="page">
       <header class="page-header">
-        <div>
-          <img
-            class="youtube-logo"
-            src="/YouTube-Logo.svg"
-            alt="Youtube logo"
-          />
-        </div>
+        <div class="youtube-logo"></div>
         <div class="searchbar">
-          <input type="text" placeholder="Search" />
+          <input class="searchbar-inside" type="text" placeholder="Search" />
           <span class="material-symbols-outlined"> search </span>
+        </div>
+        <div class="voice">
           <span class="material-symbols-outlined">mic</span>
         </div>
+        <!-- <span class="material-symbols-outlined">mic</span> -->
 
         <div class="sign-in">
           <span class="material-symbols-outlined">apps</span>
@@ -35,6 +32,7 @@
       </header>
       <div class="sub-header">
         <div class="suggestions">
+          <p class="categories">All</p>
           <p class="categories">Sports</p>
           <p class="categories">Music</p>
           <p class="categories">Movies</p>
@@ -42,10 +40,94 @@
         </div>
       </div>
       <aside class="page-aside">
-        <div></div>
-        aside
+        <div class="sidebar-navigation">
+          <div class="menu-icon">
+            <span class="material-symbols-outlined"> menu </span>
+          </div>
+          <div class="navigation-list">
+            <ul class="ul-list-item">
+              <li class="li-list">
+                <span class="material-symbols-outlined">home</span>
+                Home
+              </li>
+              <li>
+                <span class="material-symbols-outlined">explore</span>
+                Explore
+              </li>
+              <li class="li-list">
+                <span class="material-symbols-outlined">electric_bolt</span
+                >Shorts
+              </li>
+              <li class="li-list">
+                <span class="material-symbols-outlined">subscriptions</span>
+                <p>subscriptions</p>
+              </li>
+              <li class="li-list">
+                <span class="material-symbols-outlined">video_library</span
+                >library
+              </li>
+              <li class="li-list">
+                <span class="material-symbols-outlined">history</span>
+                History
+              </li>
+            </ul>
+          </div>
+        </div>
       </aside>
-      <main class="page-main">main</main>
+      <main class="page-main">
+        <!-- <div class="video">
+          <iframe
+            height="400"
+            width="400"
+            src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+          ></iframe>
+        </div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+        <div class="video"><iframe
+          height="400"
+          width="400"
+          src="https://www.youtube.com/embed/aWzlQ2N6qqg"
+        ></iframe></div>
+      </main> -->
     </section>
   </body>
 </html>
