problem with the video

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       </header>
       <div class="sub-header">
         <div class="suggestions">
-          <p class="categories">All</p>
-          <p class="categories">Sports</p>
-          <p class="categories">Music</p>
-          <p class="categories">Movies</p>
-          <p class="categories">Gaming</p>
+          <a class="suggestions-link" href=""><p class="categories">All</p></a>
+          <a class="suggestions-link" href=""><p class="categories">Sports</p></a>
+          <a class="suggestions-link" href=""><p class="categories">Music</p></a>
+          <a class="suggestions-link" href=""><p class="categories">Movies</p></a>
+          <a class="suggestions-link" href=""><p class="categories">Gaming</p></a>
         </div>
       </div>
       <aside class="page-aside">
@@ -50,7 +50,7 @@
                 <span class="material-symbols-outlined">home</span>
                 Home
               </li>
-              <li>
+              <li class="li-list">
                 <span class="material-symbols-outlined">explore</span>
                 Explore
               </li>
@@ -75,10 +75,9 @@
         </div>
       </aside>
       <main class="page-main">
-        <!-- <div class="video">
+        <div class="video">
           <iframe
-            height="400"
-            width="400"
+           
             src="https://www.youtube.com/embed/aWzlQ2N6qqg"
           ></iframe>
         </div>
@@ -127,7 +126,7 @@
           width="400"
           src="https://www.youtube.com/embed/aWzlQ2N6qqg"
         ></iframe></div>
-      </main> -->
+      </main>
     </section>
   </body>
 </html>
