--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+      />
   </head>
   <body>
+    <input class="menu-checkbox" type="checkbox">
+    <header class="header"></header>
     <section class="page">
       <header class="page-header">
         <div class="youtube-logo"></div>
@@ -77,7 +79,8 @@
       <main class="page-main">
         <div class="video">
           <iframe
-           
+            height="400"
+            width="400"
             src="https://www.youtube.com/embed/aWzlQ2N6qqg"
           ></iframe>
         </div>
