--- a/close-up-video/close-up-video.html
+++ b/close-up-video/close-up-video.html
@@ -9,29 +9,43 @@
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-      />
+    />
   </head>
   <body>
     <section class="page">
-        <header class="page-header">
-            <div class="youtube-logo"></div>
-            <div class="searchbar">
-              <input class="searchbar-inside" type="text" placeholder="Search" />
-              <span class="material-symbols-outlined"> search </span>
-            </div>
-            <div class="voice">
-              <span class="material-symbols-outlined">mic</span>
-            </div>
-            <!-- <span class="material-symbols-outlined">mic</span> -->
-    
-            <div class="sign-in">
-              <span class="material-symbols-outlined">apps</span>
-              <span class="material-symbols-outlined"> more_vert </span>
-              <p class="sign-in-link">SIGN IN</p>
-            </div>
-          </header>
+      <header class="page-header">
+        <div class="youtube-logo"></div>
+        <div class="searchbar">
+          <input class="searchbar-inside" type="text" placeholder="Search" />
+          <span class="material-symbols-outlined"> search </span>
+        </div>
+        <div class="voice">
+          <span class="material-symbols-outlined">mic</span>
+        </div>
+        <!-- <span class="material-symbols-outlined">mic</span> -->
 
-      <main class="page-main">mainpage</main>
+        <div class="sign-in">
+          <span class="material-symbols-outlined">apps</span>
+          <span class="material-symbols-outlined"> more_vert </span>
+          <p class="sign-in-link">SIGN IN</p>
+        </div>
+      </header>
+
+      <main class="page-main">
+        <div class="main-video">
+          <div class="video">
+            <video 
+            controls width="250">
+              <source src="https://www.youtube.com/embed/aWzlQ2N6qqg" 
+              type="video/webm" />
+            </video>
+          </div>
+          <div class="stats"></div>
+          <div class="users-profile"></div>
+          <div class="comments"></div>
+        </div>
+        <aside class="side-videos">sdfsdfsdf</aside>
+      </main>
     </section>
   </body>
 </html>
